Adding elastic search connectivity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,10 @@ logging.pattern.file= %msg%n
 
 API_KEY=
 API_SECRET=
-TRADE_CURRENCIES=TRX,ETH,XRP,LUN,GTO,IOTA,WABI,LRC,VEN,POE,SUB
+TRADE_CURRENCIES=TRX,ETH,XRP
 BASE_CURRENCY=BTC
-TICK_INTERVAL=5000
+TICK_INTERVAL=15000
 RECORD=true
 TRADE=false
+ELASTIC_HOST=212.48.64.248
+ELASTIC_PORT=9300
