--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.7</java.version>
 		<springframework.version>4.0.6.RELEASE</springframework.version>
+		<elasticsearch.version>6.2.3</elasticsearch.version>
 	</properties>
 
 	<parent>
@@ -41,7 +42,20 @@
 			<groupId>com.binance.api</groupId>
 			<artifactId>binance-api-client</artifactId>
 			<version>1.0.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.elasticsearch</groupId>
+					<artifactId>elasticsearch</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
+
+		<dependency>
+			<groupId>org.elasticsearch.client</groupId>
+			<artifactId>transport</artifactId>
+			<version>6.2.3</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>junit</groupId>
